# Applied_System_Software

./: README.md
CE/: ignore.gitignore
CE/project_docs/: Applied System Software.docx
main/: README.md  db.sqlite3  ignore.gitignore  main.py  manage.py  pyproject.toml  requirements.txt
main/data/: test_embedding.json
main/faceidproject/: asgi.py  settings.py  urls.py  wsgi.py
main/project_docs/: Applied System Software.docx  UML.drawio
main/recognizer/: admin.py  apps.py  face_analyzer.py  forms.py  models.py  test_face_detection.py  test_image_upload.py  tests.py  urls.py  views.py
main/recognizer/migrations/: 0001_initial.py
main/recognizer/templates/recognizer/: add_person.html  camera_feed.html  dashboard.html
main/scripts/: generate_embedding.py
