[project]
name = "face-auths"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.1",
    "insightface>=0.7.3",
    "numpy>=2.2.5",
    "onnxruntime>=1.21.1",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
]
